# OpenGL-Engine

./: .gitignore  CMakeLists.txt  Model.cpp  Model.h  README.md  Scene.cpp  main.cpp  scene.xml
Engine/: .gitignore  CMakeLists.txt  Model.cpp  Model.h  Scene.cpp  Scene.h  Transformation.cpp  Transformation.h  catmull-rom.cpp  group.cpp  group.h  main.cpp  scene.xml  scene2.xml  scene3.xml  scene4.xml  scene5.xml
Engine/3d_Models/: box.3d  comet.3d  cometa.patch  sphere.3d  universe.3d  uranus_ring.3d
Generator/: CMakeLists.txt  main.cpp
Linux/: README.md
Linux/Engine/: .gitignore  Model.cpp  Transformation.h
Linux/Engine/scenes/: scene1.xml  scene2.xml  scene3.xml  scene4.xml
Linux/Engine/scenes/3d_Models/: comet.3d  saturn_ring.3d  sphere.3d
Linux/Engine/src/: CMakeLists.txt  EngineException.h  main.cpp
Linux/Generator/: CMakeLists.txt  Generator  main.cpp
Windows/: README.md
Windows/Engine/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Model.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  engine.sln  engine.vcxproj  engine.vcxproj.filters  main.cpp  scene.xml  scene2.xml  scene3.xml  scene4.xml  scene5.xml
Windows/Engine/3d_Models/: plane.3d
Windows/Engine/Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  (+2 more)
Windows/Engine/engine.dir/Release/engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Windows/Engine/scenes/: scene.xml  scene2.xml  scene3.xml  scene4.xml  scene5.xml
Windows/Engine/src/: CMakeLists.txt  Scene.cpp  Scene.h  main.cpp
Windows/Generator/: .gitignore  main.cpp
Windows/shared/: CMakeLists.txt  Ponto.cpp  Ponto.h
XML-Graphics/: .gitignore  CMakeLists.txt  Model.cpp  Model.h  Scene.cpp  Scene.h  group.h  main.cpp  scene.xml
